--- a/templates/libvirt_domain.erb
+++ b/templates/libvirt_domain.erb
@@ -48,7 +48,9 @@
     <sound model='ich6'>
       <address type='pci' domain='0x0000' bus='0x00' slot='0x04' function='0x0'/>
     </sound>
-    <graphics type='vnc' port='-1' autoport='yes'/>
+    <% if gui %>
+    <%= "<graphics type='vnc' port='-1' autoport='yes'/>" %>
+    <% end %>
     <video>
       <model type='cirrus' vram='9216' heads='1'/>
       <address type='pci' domain='0x0000' bus='0x00' slot='0x02' function='0x0'/>
