--- a/templates/libvirt_domain.erb
+++ b/templates/libvirt_domain.erb
@@ -22,7 +22,7 @@
   <devices>
     <emulator><%= qemu_bin %></emulator>
     <disk type='file' device='disk'>
-      <driver name='qemu' type='raw'/>
+      <driver name='qemu' type='<%= image_type %>'/>
       <source file='<%= disk %>'/>
       <target dev='vda' bus='virtio'/>
       <address type='pci' domain='0x0000' bus='0x00' slot='0x06' function='0x0'/>
