--- a/templates/libvirt_domain.erb
+++ b/templates/libvirt_domain.erb
@@ -49,7 +49,7 @@
       <address type='pci' domain='0x0000' bus='0x00' slot='0x04' function='0x0'/>
     </sound>
     <% if gui %>
-    <%= "<graphics type='vnc' port='-1' autoport='yes'/>" %>
+      <graphics type='vnc' port='<%= vnc_port || -1 %>' autoport='<%= vnc_autoport %>'/>
     <% end %>
     <video>
       <model type='cirrus' vram='9216' heads='1'/>
