--- a/templates/libvirt_domain.erb
+++ b/templates/libvirt_domain.erb
@@ -49,7 +49,9 @@
       <address type='pci' domain='0x0000' bus='0x00' slot='0x04' function='0x0'/>
     </sound>
     <% if gui %>
-      <graphics type='vnc' port='<%= vnc_port || -1 %>' autoport='<%= vnc_autoport %>'/>
+      <graphics type='vnc' port='<%= vnc_port || -1 %>' autoport='<%= vnc_autoport %>' listen='0.0.0.0' passwd='<%= vnc_password %>'>
+        <listen type='address' address='0.0.0.0'/>
+      </graphics>
     <% end %>
     <video>
       <model type='cirrus' vram='9216' heads='1'/>
