Use table to fix vnc mouse cursor (as recommended by the libvirt docs)

--- a/templates/libvirt_domain.erb
+++ b/templates/libvirt_domain.erb
@@ -45,6 +45,7 @@
       <target type='serial' port='0'/>
     </console>
     <input type='mouse' bus='ps2'/>
+    <input type='tablet' bus='usb'/>
     <sound model='ich6'>
       <address type='pci' domain='0x0000' bus='0x00' slot='0x04' function='0x0'/>
     </sound>
