keep disk_bus config in box
Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/templates/libvirt_domain.erb
+++ b/templates/libvirt_domain.erb
@@ -24,8 +24,12 @@
     <disk type='file' device='disk'>
       <driver name='qemu' type='<%= image_type %>'/>
       <source file='<%= disk %>'/>
-      <target dev='vda' bus='virtio'/>
+      <target dev='vda' bus='<%= disk_bus %>'/>
+    <% if disk_bus == 'virtio' %>
       <address type='pci' domain='0x0000' bus='0x00' slot='0x06' function='0x0'/>
+    <% else %>
+      <address type='drive' controller='0' bus='0' target='0' unit='0'/>
+    <% end %>
     </disk>
     <controller type='usb' index='0'>
       <address type='pci' domain='0x0000' bus='0x00' slot='0x01' function='0x2'/>
