Config for the video model.

--- a/templates/libvirt_domain.erb
+++ b/templates/libvirt_domain.erb
@@ -61,7 +61,7 @@
     </graphics>
     <% end %>
     <video>
-      <model type='vga' vram='9216' heads='1'/>
+      <model type='<%= video_model %>' vram='9216' heads='1'/>
       <address type='pci' domain='0x0000' bus='0x00' slot='0x02' function='0x0'/>
     </video>
     <memballoon model='virtio'>
