Fix memory configuration
- vm_definiton.rb
 * always use :memory attribute as in bytes
 * fixed behavior ignoring config value stored in :memory attribute
   but @memory is used to create domain
   that is set by box's definition.
 * remove @memory
- libvirt_domain.erb
 * introduce memory_size and memory_size embeded variables.

Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/templates/libvirt_domain.erb
+++ b/templates/libvirt_domain.erb
@@ -3,8 +3,8 @@
   <% if uuid %>
   <uuid><%= uuid %></uuid>
   <% end %>
-  <memory unit='KiB'><%= memory %></memory>
-  <currentMemory unit='KiB'><%= memory%></currentMemory>
+  <memory unit='<%= memory_unit %>'><%= memory_size %></memory>
+  <currentMemory unit='<%= memory_unit %>'><%= memory_size %></currentMemory>
   <vcpu placement='static'><%= cpus %></vcpu>
   <os>
     <type arch='<%= arch %>' machine='<%= machine_type %>'>hvm</type>
