--- a/templates/libvirt_domain.erb
+++ b/templates/libvirt_domain.erb
@@ -73,7 +73,7 @@
     </memballoon>
    <% if p9 %>
      <% p9.each_with_index do |p, index| %>
-     <filesystem type='mount' accessmode='squash'>
+     <filesystem type='mount' accessmode='<%= p[:accessmode] %>'>
        <source dir='<%= p[:hostpath] %>'/>
        <target dir='<%= p[:mount_tag] %>'/>
        <address type='pci' domain='0x0000' bus='0x00' slot='<%= "0x%02x"%(16+index) %>' function='0x0' />
