config: virtio_rng addition
Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/templates/libvirt_domain.erb
+++ b/templates/libvirt_domain.erb
@@ -98,5 +98,11 @@
      </filesystem>
      <% end %>
    <% end %>
+   <% if virtio_rng %>
+    <rng model='virtio'>
+      <rate period="2000" bytes="1234"/>
+      <backend model='random'>/dev/random</backend>
+    </rng>
+   <% end %>
   </devices>
 </domain>
