--- a/templates/libvirt_domain.erb
+++ b/templates/libvirt_domain.erb
@@ -3,6 +3,13 @@
   <% if uuid %>
   <uuid><%= uuid %></uuid>
   <% end %>
+  <% if secmodel == 'selinux' %>
+  <seclabel type='dynamic' model='selinux'/>
+  <% elsif secmodel == 'apparmor' %>
+  <seclabel type='dynamic' model='apparmor'/>
+  <% else %>
+  <seclabel type='dynamic' model='dac'/>
+  <% end %>
   <memory unit='<%= memory_unit %>'><%= memory_size %></memory>
   <currentMemory unit='<%= memory_unit %>'><%= memory_size %></currentMemory>
   <vcpu placement='static'><%= cpus %></vcpu>
