make sound device configurable
Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/templates/libvirt_domain.erb
+++ b/templates/libvirt_domain.erb
@@ -65,9 +65,11 @@
     </console>
     <input type='mouse' bus='ps2'/>
     <input type='tablet' bus='usb'/>
+    <% if sound %>
     <sound model='ich6'>
       <address type='pci' domain='0x0000' bus='0x00' slot='0x04' function='0x0'/>
     </sound>
+    <% end %>
     <% if gui %>
     <graphics type='vnc' port='<%= vnc_port || -1 %>' autoport='<%= vnc_autoport %>' listen='0.0.0.0' passwd='<%= vnc_password %>'>
       <listen type='address' address='0.0.0.0'/>
